--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -14,5 +14,5 @@ jobs:
       uses: VaultVulp/gp-docker-action@1.6.0
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        image-name: albianwarp-landingpage
+        image-name: veiled-haven-landingpage
         image-tag: head
